k8s/traefik.middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: 'https'
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-collabora
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /collabora
