k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nextcloud-redis
    namespace: default
  name: nextcloud-redis
  namespace: default
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: nextcloud-redis
    namespace: default
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: nextcloud-redis
    namespace: default
  name: nextcloud-redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nextcloud-redis
      namespace: default
  template:
    metadata:
      labels:
        name: nextcloud-redis
        namespace: default
    spec:
      containers:
        - args:
            - --requirepass secret
          command:
            - redis-server
          image: redis:6.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli ping
          name: redis
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli ping
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 40Mi
