k8s/nextcloud.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nextcloud
    namespace: default
  name: nextcloud
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: nextcloud
    namespace: default
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: nextcloud
    namespace: default
  name: nextcloud
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nextcloud
      namespace: default
  template:
    metadata:
      labels:
        name: nextcloud
        namespace: default
    spec:
      containers:
        - name: nextcloud
          # image: evokom/nextcloud-full:test
          image: nextcloud:20.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-data
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    name: nextcloud
    namespace: default
  name: nextcloud
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`localhost`)
      middlewares:
        - name: https
          namespace: default
      services:
        - name: nextcloud
          port: 80
